Reorganized, cleaned up, simple version view works
Simplest proof of concept is working at the Swing UI/rendering level, gif in README
Updated to use interfaces for most everything at the API level
Fixed logger
Able to run the super-simple version via the spring app runner